--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -17,31 +17,42 @@
 <div id="cssmenu" class="booking_menu admin_menu smaller_text all-space">
   <ul>
    <li class='<%if ['/admin/booking/config/general','/admin/booking/config/templates','/admin/booking/booking-place-defs','/admin/calendar/timetables',
-   '/admin/rates/seasons','/admin/booking/booking-places'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.configuration%></a>
+   '/admin/rates/seasons','/admin/booking/booking-places',
+   '/admin/rates/season-defs','/admin/rates/factor-defs',
+   '/admin/rates/promotion-codes'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.configuration%></a>
       <ul>
         <li><a href='/admin/booking/config/general'><%=t.booking_console_configuration.general_configuration%></a></li>
         <li><a href='/admin/booking/config/templates'><%=t.booking_console_configuration.templates%></a></li>
-        <li><a href='/admin/booking/booking-place-defs'><%=t.booking_console.places%></a></li>
-        <li><a href='/admin/calendar/timetables'><%=t.booking_console.timetables%></a></li>                  
-      </ul>
-   </li>
-   <li class='<%if ['/admin/booking/catalog','/admin/booking/booking-categories','/admin/booking/booking-items','/admin/booking/booking-extras'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.products%></a>
+
+<li class='<%if ['/admin/booking/booking-place-defs','/admin/calendar/timetables'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.pickup_return%></a>
       <ul>
-        <li><a href='/admin/booking/catalog'><%=t.booking_console.catalogs%></a></li>
-        <li><a href='/admin/booking/booking-categories'><%=t.booking_console.categories%></a></li>
-        <li><a href='/admin/booking/booking-items'><%=t.booking_console.items%></a></li>
-        <li><a href='/admin/booking/booking-extras'><%=t.booking_console.extras%></a></li>        
-      </ul>    
-   </li>
-   <li style="display:none" class='<%if ['/admin/calendar/calendars'].index(request.path)%>active<%end%>'><a href='/admin/calendar/calendars'><%=t.booking_console.calendars%></a></li>   
-   <li class='<%if ['/admin/rates/season-defs','/admin/rates/factor-defs','/admin/rates/price-defs','/admin/rates/adjust-prices'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.rates%></a>
+        <li><a href='/admin/booking/booking-place-defs'><%=t.booking_console.places%></a></li>
+        <li><a href='/admin/calendar/timetables'><%=t.booking_console.timetables%></a></li>
+      </ul>
+</li>      
+
+<li class='<%if ['/admin/rates/season-defs','/admin/rates/factor-defs','/admin/rates/promotion-codes'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.rates%></a>
       <ul>
         <li><a href='/admin/rates/season-defs'><%=t.rates_console.seasons%></a></li>
         <li><a href='/admin/rates/factor-defs'><%=t.rates_console.factors%></a></li>
-        <li><a href='/admin/rates/price-defs'><%=t.booking_console.prices%></a></li>
-        <li><a href='/admin/rates/adjust-prices'><%=t.booking_console.adjust_prices%></a></li>        
+        <li><a href='/admin/rates/promotion-codes'><%=t.rates_console.promotion_codes%></a></li>        
       </ul>    
-   </li>      
+   </li>                           
+      </ul>
+   </li>
+
+   <li class='<%if ['/admin/booking/catalog','/admin/booking/booking-categories','/admin/booking/booking-items','/admin/booking/booking-extras', '/admin/rates/adjust-prices','/admin/booking/activities'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.products%></a>
+      <ul>
+        <li><a href='/admin/booking/booking-categories'><%=t.booking_console.categories%></a></li>
+        <li><a href='/admin/booking/booking-extras'><%=t.booking_console.extras%></a></li>
+        <li><a href='/admin/booking/booking-items'><%=t.booking_console.items%></a></li>
+        <% if booking_activities %>
+        <li><a href='/admin/booking/activities'><%=t.booking_console.activities%></a></li>                                
+        <% end %>
+        <li><a href='/admin/rates/adjust-prices'><%=t.booking_console.adjust_prices%></a></li>                        
+      </ul>    
+   </li>
+   <li style="display:none" class='<%if ['/admin/calendar/calendars'].index(request.path)%>active<%end%>'><a href='/admin/calendar/calendars'><%=t.booking_console.calendars%></a></li>        
    <li class='<%if ['/admin/booking/new','/admin/booking/customers', '/admin/booking/bookings','/admin/booking/planning'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.bookings%></a>
       <ul>
         <li><a href='/admin/booking/customers'><%=t.booking_console.new_booking%></a></li>           
@@ -50,7 +61,7 @@
       </ul>    
    </li>   
    <% if booking_activities %>
-   <li class='<%if ['/admin/order/orders'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.activities%></a>
+   <li class='<%if ['/admin/order/orders'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.activity_bookings%></a>
       <ul>   
         <li><a href='/admin/order/orders'><%=t.booking_console.reservations%></a></li>
       </ul>
