--- a/views/booking_extras_management.js.erb
+++ b/views/booking_extras_management.js.erb
@@ -15,24 +15,42 @@ require(["jquery", "YSDEntityManagement", "YSDEntityManagementComplementHooks",
       $('#code').attr('code', true);
       $('#name').focus();
       this.configForm(entity);
+      $.ajax({url: '/admin/rates/prices/'+ entity.price_definition_id, dataType: 'text'}).done(function(html) {
+        var dom = $('<html />').prop('innerHTML', html);
+        $('#prices_container').html(dom.find('body #page_wrapper'));
+        $('head').append(dom.find('script'));
+      });      
     },
   
     onNew : function() {
       $('#code').focus();
-      this.configForm(null);
-      $('#create_extra_price').bind('change', function() {
-         if ($('#create_extra_price').prop('checked')) {
-           $('#price_definition\\[id\\]').prop('disabled', true);
-           $('#category_price').show();
-         }
-         else {
-           $('#price_definition\\[id\\]').prop('disabled', false);
-           $('#category_price').hide();
-         }
-      });      
+      this.configForm(null);     
+    },
+
+    onRenderEntities: function() {
+      $('.elements-search').show(); 
     },
 
     configForm: function(entity) {
+
+      $("#content > div").hide(); // Initially hide all content
+      $("#content_tabs li:first").attr("id","current"); // Activate first tab
+      $("#content > div:first").fadeIn(); // Show first tab content
+      $('#content_tabs a').click(function(e) {
+        e.preventDefault();
+        if ($(this).attr("name") == 'preview') {
+          ($('#home_frame')[0]).contentWindow.location.reload();
+        }
+        if ($(this).closest("li").attr("id") == "current"){ //detection for current tab
+         return;       
+        }
+        else{             
+          $("#content > div").hide(); //Hide all content
+          $("#content_tabs li").attr("id",""); //Reset id's
+          $(this).parent().attr("id","current"); // Activate this
+          $('#' + $(this).attr('name')).fadeIn(); // Show content for current tab          
+        }
+      });
 
       var priceDefinitionDataSource= new RemoteDataSource('/api/rate-price-defs',
           {'id':'id','description':'name'});
@@ -56,7 +74,7 @@ require(["jquery", "YSDEntityManagement", "YSDEntityManagementComplementHooks",
   hooks = hooks.concat(EntityManagementComplementHooks.complements);
                  
   var hooksManager = new EntityManagement(urls, 'booking-extra', 20, hooks,
-    {prefix: '/admin/booking'});
+    {prefix: '/admin/booking',hold_form_after_action:true});
 
   
 });
